# pythonlings

./: .gitignore  .gitmodules  Makefile  README.md  index.html  index.xml  pyproject.toml  sitemap.xml
.github/workflows/: doc-deploy.yml  lint_and_test.yml  test-pipeline.yml
docs/src/: config.yaml
posts/: index.xml
posts/get-started/: index.html
pythonlings/: __main__.py
pythonlings/adapters/: cmd.py
pythonlings/domain/: exercises.py
pythonlings/exercises/1_variables/: variables1.py  variables2.py  variables3.py  variables4.py  variables5.py
pythonlings/exercises/2_data_structures/: data_structures1.py
pythonlings/i18n/: data_structures.en.yml  data_structures.pt.yml  p.en.yml  p.pt.yml  variables.en.yml  variables.pt.yml
pythonlings/services/: exercises.py  logging.py
src/: config.yaml
src/content/posts/: get-started.md
tests/: conftest.py  test_pythonlings.py
tests/fixtures/: exercise_sample_fail.py  exercise_sample_success.py  exercise_sample_to_do.py
tests/fixtures/1_examples/: exercise_sample_fail.py  exercise_sample_to_do.py
